# Kura_Notes

./: .gitignore  Flashcard_maker_Blueprint.md  IMPLEMENTATION_PHASES.md  README.md  SCHOLR_BLUEPRINT_V2.md  SCHOLR_PROJECT_OUTLINE.md  UI_PLAN.md  index.html  package-lock.json  package.json  plan-smartFlashcardFlowV3.prompt.prompt.md  schema.sql  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  omni_capture.rs
src-tauri/src/ai/: gemma.rs  generator.rs  heuristics.rs  mod.rs  state.rs
src-tauri/src/commands/: ai_commands.rs  class_commands.rs  folder_commands.rs  mod.rs  note_commands.rs
src-tauri/src/storage/: ai.rs  classes.rs  db.rs  folders.rs  mod.rs  notes.rs
src/components/ai/: SynthesizeButton.tsx
src/components/capture/: CaptureWindow.tsx
src/components/flashcards/: FlashcardBuilder.tsx
src/components/layout/: NavigatorRail.tsx  Sidebar.tsx  TabBar.tsx  ToolRail.tsx
src/components/notes/: DualPane.tsx  EditorToolbar.tsx  FolderCanvas.tsx  FormattingToolbar.tsx  NoteEditor.tsx  SelectionToolbar.tsx  SmartColonPalette.tsx  StudyPanel.tsx  WikilinkPopover.tsx
src/components/tools/: ToolDock.tsx  toolRegistry.tsx
src/components/ui/: EngineStatus.tsx  Icon.tsx
src/hooks/: useDebounce.ts  useProgressiveReveal.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: batchCardGen.ts  invoke.ts  lineContext.ts  mockBackend.ts  paletteActions.ts
(+1 files in other folders)
